# Test_task

./: .gitignore  CMakeLists.txt  README.md  config.toml  specs.md
src/: main.cpp
src/config_reader/: config_reader.cpp  config_reader.hpp
src/csv_parser/: csv_parser.cpp  csv_parser.hpp  string_counter.hpp  thread_pool_queue.hpp  thread_queue.hpp
src/logger/: logger.cpp  logger.h  logger.hpp
src/out_writer/: algorithm.hpp  algorithm_median.cpp  algorithm_median.hpp  custom_serializer.hpp  out_writer.cpp  out_writer.hpp  out_writer_impl.hpp  serializer.hpp
tests/: medain_tests.cpp  median_prices.csv  out_writer_tests.cpp  part1.csv  part2.csv  trades.csv
